--- a/app/src/debug/res/values/strings.xml
+++ b/app/src/debug/res/values/strings.xml
@@ -2,5 +2,6 @@
 <resources>
 
     <string name="app_name">DEV</string>
+    <string name="log_file_provider_authorities">com.tangem.data.LogFileProvider.debug</string>
 
 </resources>
