--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,21 @@
     <string name="title_activity_loaded_wallet">LoadedWalletActivity</string>
     <string name="title_activity_settings_feature">Settings</string>
 
+    <!-- menu main -->
+    <string name="clean_up">Clean up</string>
+    <string name="manage_user_pin_1">Manage user PIN1…</string>
+    <string name="manage_user_pin_2">Manage user PIN2…</string>
+    <string name="send_logs">Send logs…</string>
+    <string name="about">About…</string>
+
+    <!-- menu loaded wallet -->
+    <string name="set_pin_1">Set PIN1</string>
+    <string name="set_pin_2">Set PIN2</string>
+    <string name="reset_pin_1_to_default">Reset PIN1 to default</string>
+    <string name="reset_pin_2_to_default">Reset PIN2 to default</string>
+    <string name="reset_pins_to_default">Reset PINs to default</string>
+    <string name="erase_wallet">Erase wallet</string>
+
 
     <!-- LogoActivity -->
     <string name="beta">BETA</string>
