--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,12 @@
     <string name="title_activity_loaded_wallet">LoadedWalletActivity</string>
     <string name="title_activity_settings_feature">Settings</string>
 
+    <!-- dialogs -->
+    <string name="device_is_rooted">Your Android device is rooted. Security at risk!</string>
+    <string name="got_it">Got it</string>
+    <string name="warning">Warning</string>
+    <string name="the_nfc_adapter_length_apdu">The NFC adapter of the device does not support extended length APDU, it\'s possible that some functions will not work!</string>
+
     <!-- menu main -->
     <string name="clean_up">Clean up</string>
     <string name="manage_user_pin_1">Manage user PIN1…</string>
@@ -59,6 +65,8 @@
 
     <!-- MainActivity -->
     <string name="tap_tangem_card">Tap Tangem card with your smartphone</string>
+    <string name="scan_banknote">Scan a banknote with your \n smartphone as shown above</string>
+    <string name="try_to_scan_again">Try to scan again</string>
 
     <!-- PreparePaymentActivity -->
     <string name="send_payment">Send payment</string>
@@ -79,23 +87,13 @@
     <string name="please_wait">Please wait while the payment is sent…</string>
 
 
-
-
-
-
-
-
-
-
     <!-- Strings related to Settings -->
 
     <!-- Example General settings -->
     <string name="pref_header_general">General</string>
 
     <string name="pref_title_social_recommendations">Enable social recommendations</string>
-    <string name="pref_description_social_recommendations">Recommendations for people to contact
-        based on your message history
-    </string>
+    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>
 
     <string name="pref_title_display_name">Display name</string>
     <string name="pref_default_display_name">John Smith</string>
