--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -172,7 +172,21 @@
     <string name="manufacturer">Manufacturer</string>
     <string name="card_identity">Card identity</string>
     <string name="attested">Attested</string>
+    <string name="not_confirmed">Not confirmed</string>
+    <string name="reusable">Reusable</string>
+    <string name="none">None</string>
+    <string name="last_one">Last one!</string>
+    <string name="unlimited">Unlimited</string>
+    <string name="one_off_banknote">One-off banknote</string>
     <string name="firmware">Firmware</string>
     <string name="registration_date">Registration date</string>
+    <string name="possession_proved">Possession proved</string>
+    <string name="possession_not_proved">Possession NOT proved</string>
+    <string name="not_available">not available</string>
+
+    <!-- SavePINActivity -->
+    <string name="save">Save</string>
+    <string name="delete">Delete</string>
+    <string name="protect_with_fingerprint">Protect with fingerprint</string>
 
 </resources>
