--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="device_is_rooted">Your Android device is rooted. Security at risk!</string>
     <string name="got_it">Got it</string>
     <string name="warning">Warning</string>
+    <string name="security_delay">Security delay</string>
     <string name="the_nfc_adapter_length_apdu">The NFC adapter of the device does not support extended length APDU, it\'s possible that some functions will not work!</string>
     <string name="your_money_is_at_risk">Your money is at risk!</string>
     <string name="this_banknote_has_enforced_security_delay">This banknote has enforced security delay</string>
