--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,7 @@
     <string name="scan_again_to_verify_the_card">Scan again to verify the card</string>
     <string name="smart_cash_ag">Smart Cash AG</string>
     <string name="wallet">Wallet</string>
+    <string name="need_attach_card_again">Need attach card again</string>
 
     <!-- dialogs -->
     <string name="device_is_rooted">Your Android device is rooted. Security at risk!</string>
