--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,8 @@
     <string name="smart_cash_ag">Smart Cash AG</string>
     <string name="wallet">Wallet</string>
     <string name="need_attach_card_again">Need attach card again</string>
+    <string name="reading">READING…</string>
+    <string name="verifying">VERIFYING…</string>
 
     <!-- dialogs -->
     <string name="device_is_rooted">Your Android device is rooted. Security at risk!</string>
