--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,10 +116,12 @@
     <string name="this_banknote_protected_default_PIN2_code">This banknote is protected by default PIN2 code</string>
     <string name="this_banknote_protected_user_PIN2_code">This banknote is protected by user\'s PIN2 code</string>
     <string name="unlocked_banknote_only_development_use">Unlocked banknote, only for development use</string>
+    <string name="this_banknote_will_enforce">This banknote will enforce %.0f seconds security delay for all operations requiring PIN2 code</string>
     <string name="share_wallet_address_with">Share wallet address with:</string>
     <string name="copied_clipboard">Copied to clipboard</string>
     <string name="extract">EXTRACT</string>
     <string name="load">LOAD</string>
+
 
     <!-- LogoActivity -->
     <string name="beta">BETA</string>
