--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -169,7 +169,7 @@
     <string name="cannot_check_balance_no_connection_with_blockchain_nodes">Cannot check balance! No connection with blockchain nodes</string>
     <string name="the_wallet_is_empty">The wallet is empty</string>
     <string name="please_wait_for_confirmation_of_incoming_transaction">Please wait for confirmation of incoming transaction</string>
-    <string name="fee_exceeds_payment_amount_enter_correct_value_and_repeat_sending">Fee exceeds payment amount. Enter correct value and repeat sending.</string>
+    <string name="not_enough_eth_for_transaction_fee">Not enough ETH for transaction fee</string>
     <string name="pin_2_is_required_to_sign_the_payment">PIN2 is required to sign the payment</string>
 
     <!-- EmptyWalletActivity -->
