--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="with_balance">with balance</string>
     <string name="send_to_wallet">Send to wallet</string>
     <string name="amount">Amount</string>
-    <string name="including_fee">(including fee)</string>
+    <!--<string name="including_fee">(including fee)</string>-->
     <string name="m_btc">mBTC</string>
     <string name="scan_again_to_verify_the_card">Scan again to verify the card</string>
     <string name="smart_cash_ag">Smart Cash AG</string>
@@ -164,8 +164,10 @@
     <string name="minimal">Minimal</string>
     <string name="normal">Normal</string>
     <string name="priority">Priority</string>
-    <string name="feein">Including fee</string>
-    <string name="feeout">Not including fee</string>
+    <string name="including_fee_">Including fee</string>
+    <string name="not_including_fee_">Not including fee</string>
+    <string name="including_fee">(including fee)</string>
+    <string name="not_including_fee">(not including fee)</string>
     <string name="the_obtained_data_is_outdated_try_again">The obtained data is outdated! Try again</string>
     <string name="cannot_reach_current_active_blockchain_node_try_again">Cannot reach current active blockchain node. Try again</string>
     <string name="cannot_check_balance_no_connection_with_blockchain_nodes">Cannot check balance! No connection with blockchain nodes</string>
