--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -384,4 +384,5 @@
     <string name="feedback_data_collection_message">Информация ниже не является обязательной. Вы можете стереть её, если хотите.</string>
     <string name="main_page_balance">Баланс</string>
     <string name="main_processing_full_amount">Обработка полной суммы…</string>
+    <string name="main_manage_tokens">Управление токенами</string>
 </resources>
