--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -208,4 +208,5 @@
     <string name="xtz_withdrawal_message_ignore">No, send all</string>
     <string name="main_page_balance">Total balance</string>
     <string name="main_processing_full_amount">Processing full amount…</string>
+    <string name="main_manage_tokens">Manage tokens</string>
 </resources>
