--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -385,4 +385,5 @@
     <string name="main_page_balance">Баланс</string>
     <string name="main_processing_full_amount">Обработка полной суммы…</string>
     <string name="main_manage_tokens">Управление токенами</string>
+    <string name="token_item_no_rate">Нет цены</string>
 </resources>
