--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -207,6 +207,7 @@
     <string name="xtz_withdrawal_message_reduce">Reduce by %s XTZ</string>
     <string name="xtz_withdrawal_message_ignore">No, send all</string>
     <string name="main_page_balance">Total balance</string>
-    <string name="main_processing_full_amount">Processing full amount…</string>
+    <string name="main_processing_full_amount">Some networks are unreachable</string>
     <string name="main_manage_tokens">Manage tokens</string>
+    <string name="token_item_no_rate">No rate</string>
 </resources>
