--- a/core/res/src/main/res/values-ru/strings.xml
+++ b/core/res/src/main/res/values-ru/strings.xml
@@ -239,6 +239,7 @@
   <string name="express_provider_min_amount">Доступно с %s</string>
   <string name="express_provider_not_available">Недоступно для этой пары</string>
   <string name="express_provider_permission_needed">Требуется разрешение</string>
+  <string name="express_provider_recommended">Рекомендовано</string>
   <string name="express_terms_of_use">Условиями использования</string>
   <string name="express_token_list_empty_search">Токены не найдены. Пожалуйста, попробуйте другой запрос</string>
   <string name="express_transaction_id">ID: %s</string>
